Chore: Refactor `Markup` method signatures, improve tag handling, and add `markup` method in `XMLNode`